package ar.edu.uba.fi;

public interface Regla {
    Object verificar();
}
